--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -19,7 +19,8 @@
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
 #basket img
 
-/*__write_selector_here__*/ {
+/*__write_selector_here__*/ 
+  {
   position: absolute;
   z-index: 5;
   top: 291px;
