--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -18,7 +18,7 @@
 
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
 
-#ball + img
+
 
 /*__write_selector_here__*/ 
  img[alt="Kitty 5"]#basket img {
@@ -30,7 +30,7 @@
 
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
-/*__write_selector_here__*/ kitty-4{
+/*__write_selector_here__*/ kitty-4 #ball + img{
   position: absolute;
   z-index: 4;
   top: 260px;
